--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "tslint.autoFixOnSave": true,
+  "tslint.autoFixOnSave": false,
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
