--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     ],
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "typescript-babel-jest"
-    }
+    },
+    "testMatch": [
+      "**/*.test.(ts|tsx|js)"
+    ]
   },
   "resolutions": {
     "babel-core": "^7.0.0-bridge.0"
@@ -54,6 +57,7 @@
     "@babel/preset-stage-3": "^7.0.0-beta.40",
     "@babel/preset-typescript": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
+    "@types/enzyme": "^3.1.9",
     "@types/jest": "^22.1.3",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
