--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "yarn test -o --watch",
+    "test:ci": "jest",
     "lint": "tslint \"src/**/*.ts\""
   },
   "jest": {
