--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
   "author": "Christopher Pappas <damassi.pappas@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prebuild": "yarn clean",
+    "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js --progress --profile --color --display-error-details --display-cached",
     "clean": "rimraf dist .cache-loader",
     "coverage": "cross-env NODE_ENV=test jest --coverage",
-    "prepublishOnly": "yarn build",
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "prepublishOnly": "npm run  build",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "yarn test -o --watch",
-    "lint": "tslint \"src/**/*.ts\""
+    "test:watch": "npm run test -o --watch",
+    "lint": "tslint \"src/**/*.ts\"",
+    "outdated": "npm-check -u"
   },
   "jest": {
     "setupFiles": [
       "./jest.setup.js"
     ],
+    "testURL": "http://locahost",
     "moduleDirectories": [
       "./node_modules",
       "./src"
@@ -58,36 +60,38 @@
     "@babel/preset-typescript": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
     "@types/enzyme": "^3.1.9",
-    "@types/jest": "^22.1.3",
+    "@types/jest": "^24.0.12",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "babel-loader": "8.0.0-beta.0",
+    "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "cache-loader": "^1.2.0",
+    "cache-loader": "^3.0.0",
     "cross-env": "^5.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "fork-ts-checker-notifier-webpack-plugin": "^0.2.0",
-    "fork-ts-checker-webpack-plugin": "^0.3.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "22.4.0",
+    "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
     "nodemon": "^1.15.1",
+    "npm-check": "^5.9.0",
     "rimraf": "^2.6.2",
-    "thread-loader": "^1.1.2",
+    "thread-loader": "^2.1.2",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "tslint-react": "^3.5.1",
-    "typescript": "^2.7.2",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.4.5",
     "typescript-babel-jest": "^1.0.5",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
     "webpack-fail-plugin": "^2.0.0"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "browserslist": [
     "last 1 Chrome versions",
