--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "babel-7-typescript-example",
   "version": "1.0.0",
+  "sideEffects": false,
   "description": "Example TypeScript project built on top of new Babel 7 features",
   "keywords": [
     "babel",
@@ -23,7 +24,8 @@
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test -o --watch",
     "lint": "tslint \"src/**/*.ts\"",
-    "outdated": "npm-check -u"
+    "outdated": "npm-check -u",
+    "reset": "npx npm-force-resolutions && npm i"
   },
   "jest": {
     "setupFiles": [
@@ -32,7 +34,7 @@
     "testURL": "http://locahost",
     "moduleDirectories": [
       "./node_modules",
-      "./src"
+      "<rootDir>/src"
     ],
     "moduleFileExtensions": [
       "ts",
@@ -40,6 +42,10 @@
       "js",
       "jsx"
     ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "identity-obj-proxy",
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileMock.js"
+    },
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "typescript-babel-jest"
     },
@@ -63,20 +69,29 @@
     "@types/jest": "^24.0.12",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "cache-loader": "^3.0.0",
     "cross-env": "^5.1.3",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.15.1",
     "npm-check": "^5.9.0",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "^1.2.3",
     "thread-loader": "^2.1.2",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^8.0.1",
