--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "cache-loader": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.1.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.3.0",
@@ -82,10 +83,12 @@
     "fork-ts-checker-webpack-plugin": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.15.1",
     "npm-check": "^5.9.0",
+    "popper.js": "^1.15.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^2.6.2",
@@ -100,11 +103,13 @@
     "typescript-babel-jest": "^1.0.5",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-fail-plugin": "^2.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
